--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -41,8 +41,8 @@
                             android:id="@+id/nameInput"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:ems="15" />
+                            android:ems="15"
+                            android:inputType="text" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                 </TableRow>
