--- a/app/src/main/res/layout/activity_all_employee.xml
+++ b/app/src/main/res/layout/activity_all_employee.xml
@@ -8,7 +8,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewer"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:fastScrollEnabled="false"
         app:layout_constraintStart_toStartOf="parent"
