--- a/app/src/main/res/layout/activity_data_viewer.xml
+++ b/app/src/main/res/layout/activity_data_viewer.xml
@@ -15,15 +15,18 @@
         android:shadowColor="#CC000000"
         android:shadowDy="40"
         android:shadowRadius="100"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        >
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
+            android:layout_marginBottom="8dp"
             android:padding="5dp">
 
 
@@ -51,7 +54,8 @@
                 android:gravity="center"
                 android:text="ID"
                 android:textColor="@color/purple_500"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/ssnViewer"
@@ -61,6 +65,7 @@
                 android:layout_marginTop="0dp"
                 android:gravity="center_vertical"
                 android:text="SSN"
+
                 android:textColor="@color/purple_200" />
 
             <TextView
@@ -122,6 +127,7 @@
                 android:layout_marginTop="120dp"
                 android:gravity="center_vertical"
                 android:text="Address" />
+
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
